--- a/Costa_del_Sol.mw
+++ b/Costa_del_Sol.mw
@@ -5,7 +5,7 @@ t Omvat de stad [[Málaga (stad)|Málaga]] en de steden [[Torremolinos]], [[Bena
 
 De eerste minselke bewonen ien de regio stamt oet de [[Bronstied]]. Loater het t keloniseerd worden en onder heerschoppij wèst van verschaaidene kulturen lieks as de [[Feniciers]], [[Carthago|Karthagioanen]], [[Romeinse Riek|Reumers]], [[Vandoalen]], [[Visigoten]] and [[Moren]], veur de ''[[Reconquista]]'', de herkirstenen van Spanje en Portegaal. 
 
-Historischerwies leefde de bevolken ien de viskerslougen en ien de "witte" lougen dij n ìndje t binnenlaand ienlagen, ien de baargen dij boven de kost liggen. t Gebied wör ontdekt en ontwikkeld om aan de eisen te voldoun van internasjonoal [[toerisme]] ien de joaren [[1950's|'50]] van 20. aiw en het sunt den n populeer stee wèst worden veur boetenlaandse toeristen. Nait allend veur de [[strand]]en môr ook veur de lokoale kultuur. t Gebied is spesjoalerwies vernuimd veur zien steden lieks as [[Marbella]], dij de Costa del Sol zien imago bezörgd het as bezuikstee veur de bovenklas en vernuimde luu.
+Historischerwies leefde de bevolken ien de viskerslougen en ien de "witte" lougen dij n ìndje t binnenlaand ienlagen, ien de baargen dij boven de kost liggen. t Gebied wör ontdekt en ontwikkeld om aan de eisen te voldoun van internasjonoal [[toerisme]] ien de joaren [[1950-1959|'50 van 20. aiw]] en het sunt den n populeer stee wèst worden veur boetenlaandse toeristen. Nait allend veur de [[strand]]en môr ook veur de lokoale kultuur. t Gebied is spesjoalerwies vernuimd veur zien steden lieks as [[Marbella]], dij de Costa del Sol zien imago bezörgd het as bezuikstee veur de bovenklas en vernuimde luu.
 
 Ien de körtledene joaren het de Costa Del Sol n bekinde [[golf (sport)|golflokoatsie]] worden, woaraan e de bienoam ''Costa Del Golf'' kregen het. t Aantel kwaliteits golfveurzainens, dij veuraal om en bie [[Marbella]] legen binnen, ligt om en bie de 50. De Costa del Sol het, danks deur t hoge aantel golfers van over haile wereld, stimuloatsie had ien t [[toerisme]] en en aantel akkomodoatsies ien t gebied. 
 
