Wysigingen döär [[Special:Contributions/213.126.77.114|213.126.77.114]] ([[User talk:213.126.77.114|oaverleg]]) weaderümmedraid tot de lätste versy van [[User:RoboServien|RoboServien]]

--- a/Wiechen.mw
+++ b/Wiechen.mw
@@ -1,5 +1,5 @@
 {{Gemeante |
-naam = Deze flat in wiechen!!! |
+naam = Wiechen |
 bestaandsnaam vlagge = Flag of Wijchen.svg |
 bestaandsnaam woapn = Coat of arms of Wijchen.svg |
 lokatie = LocatieWijchen |
@@ -22,7 +22,7 @@ webstie = [http://www.wijchen.nl www.wijchen.nl] |
 
 Wiechen ligt an den [[Maas]] kortbi-j den [[Waal (revier)|Waal]] en zöt zichzelf as ''Centrum in Tweestreumenlaand''. 
 
-De gemeente Wiechen mek deel uut van de Stadsregio [[Arnem]]-[[Nijmegen]].
+De gemeente Wiechen mek deel uut van de Stadsregio [[Arnem]]-[[Nijmegen]]. 
 
 == Darpen en stad ==
 Antal inwonners in stad, darp of noaberschop vanof 1 januari 2006: 
