/* As Róisín Murphy */

--- a/Róisín_Murphy.mw
+++ b/Róisín_Murphy.mw
@@ -9,6 +9,7 @@
 * ''Overpowered'' (2007)
 * ''Hairless Toys'' (2015)
 * ''Take Her Up to Monto'' (2016)
+* ''Róisín Machine'' (2020)
 
 === Mit Moloko ===
 * ''Do You Like My Tight Sweater?'' (1995)
