--- a/Erwin_de_Vries.mw
+++ b/Erwin_de_Vries.mw
@@ -29,8 +29,10 @@ In 2017 won Erwin de Vries de ''[[Dagblad van het Noorden Streektaalpries|DvhN S
 == Priezen ==
 
 * 2010 [[Grunny]], veur zien verdainsten veur de Grunneger meziek
+* 2017 ''Bé Wever Beker'' (gedaild mit Wat Aans!), pebliekspries van t [[Bosklopper Gala]], veur ''Lözze Grond'' as beste single van 2016
 * 2017 [[Dagblad van het Noorden Streektaalpries|DvhN Streektoalpries]], veur t album ''De noodzoak''
 * 2021 [[K. ter Laanpries]], veur zien verdainsten veur de Grunneger toal en kultuur
+* 2022 [[Dagblad van het Noorden Streektaalpries|DvhN Streektoalpries]], veur t album ''Antwoord''
 {{DEFAULTSORT:Vries, Erwin de}}
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Muzikaant oet Grunnen]]
