--- a/Bosklopper_Gala.mw
+++ b/Bosklopper_Gala.mw
@@ -1,11 +1,11 @@
-t '''Gradus J. Bosklopper Gala''' is n joarliekse feestoavend rond de verkaizen van t schierste [[Grunnegs]]toalege laid van t òflopen joar. t Gala is in t leven roupen deur zanger [[Bert Hadders]] en [[Theater vanBeresteyn]] in [[Veendam]]. t Gala vindt elk joar in de feberwoariemoand ploats in dit theoater.
+t '''Gradus J. Bosklopper Gala''' was n joarliekse feestoavend rond de verkaizen van t schierste [[Grunnegs]]toalege laid van t òflopen joar. t Gala is in t leven roupen deur zanger [[Bert Hadders]] en [[Theater vanBeresteyn]] in [[Veendam]]. t Gala von elk joar in de feberwoariemoand ploats in dit theoater. Noa drij edities wer t gala nait meer holden wegens tegenvalende peblieke belangstèllen.
 
-Bie t gala worden de '''Bosklopper Bokoal''' (jurypries) en de '''Bé Wever' Beker''' (pebliekspries) oetlangd. Tien nije nummers oet t veurgoande joar worden veur de priezen nomineerd. Dizze nummers mouten as single verschenen en origineel aigen waark (gain covers) wezen.
+Bie t gala werren de '''Bosklopper Bokoal''' (jurypries) en de '''Bé Wever' Beker''' (pebliekspries) oetlangd. Tien nije nummers oet t veurgoande joar werren veur de priezen nomineerd. Dizze nummers mozzen as single verschenen en origineel aigen waark (gain covers) wezen.
 
-t Gala en de jurypries binnen vernuimd noar de fiktieve persoon [[Gradus J. Bosklopper]]. Volgens t verhoal het dizze antropoloog in de joaren 1950 en 1960 mit n bandrecorder opnoames moakt van Grunneger laidjes. Bert Hadders haar Bosklopper zien geluudsbanden opdoan op n rommelmaart. Veur Hadders binnen d'opnoames t bewies dat de boakermat van de Grunneger meziek in de veenkelonies ligt. t Gala en de pries binnen n eerbetoon aan Bosklopper.
+t Gala en de jurypries wazzen vernuimd noar de fiktieve persoon [[Gradus J. Bosklopper]]. Volgens t verhoal het dizze antropoloog in de joaren 1950 en 1960 mit n bandrecorder opnoames moakt van Grunneger laidjes. Bert Hadders haar Bosklopper zien geluudsbanden opdoan op n rommelmaart. Veur Hadders binnen d'opnoames t bewies dat de boakermat van de Grunneger meziek in de veenkelonies ligt. t Gala en de pries binnen n eerbetoon aan Bosklopper.
 
 == Bosklopper Bokoal ==
-De Bosklopper Bokoal is de pries dij deur de vakjury toukend wordt. Aan de bokoal is n geldpries van €&nbsp;1000,- verbonden.
+De Bosklopper Bokoal was de pries dij deur de vakjury toukend wordt. Aan de bokoal was n geldpries van €&nbsp;1000,- verbonden.
 
 === Winnende nummers ===
 * 2016 ''Trilploat'' – [[Wat Aans]]
@@ -13,7 +13,7 @@ De Bosklopper Bokoal is de pries dij deur de vakjury toukend wordt. Aan de bokoa
 * 2018 ''t Leed is leden'' – [[Nulviefteg]]
 
 == Bé Wever Beker ==
-De Bé Wever Beker is de pebliekspries, woarveur stemd worden kin via de webstee van [[RTV Noord]]. De pries is vernuimd noar de in 2017 oet tied kommen festivalorganizoator [[Bé Wever]] oet Veendam, dij belangriek was veur de live-meziek in Veendam en omstreken. Aan de beker is n geldpries van €&nbsp;250,- verbonden.
+De Bé Wever Beker was de pebliekspries, woarveur stemd worden kon via de webstee van [[RTV Noord]]. De pries was vernuimd noar de in 2017 oet tied kommen festivalorganizoator [[Bé Wever]] oet Veendam, dij belangriek was veur de live-meziek in Veendam en omstreken. Aan de beker was n geldpries van €&nbsp;250,- verbonden.
 
 === Winnende nummers ===
 * 2016 ''Trilploat'' – Wat Aans, daild mit ''Lözze Grond'' – [[Erwin de Vries]]
