--- a/Lettele.mw
+++ b/Lettele.mw
@@ -37,7 +37,7 @@ In lettele keump meenstens eenmoal in de twee uur de buurtbusse 590: Okkenbroek 
 Op et noorden van Lettele keump busliene 4: Deventer NS - [[Heeten]].
 
 ==Bekeande leu==
-* [[Carlijn Achtereekte]] ([[29 jannewaori|29 januwoari]] [[1990]]) - [[scheuvel|skaatster]]
+* [[Bestaand:Restanten V1 lanceerbaan Lettele.jpg|duum]][[Carlijn Achtereekte]] ([[29 jannewaori|29 januwoari]] [[1990]]) - [[scheuvel|skaatster]]
 
 {{Bron|<references/>}}
 
