*Empty MediaWiki Message*

--- a/Sukerfeest.mw
+++ b/Sukerfeest.mw
@@ -1,3 +1,5 @@
+[[File:台北清真寺.JPG|thumb|Sukerfeest]]
+
 T '''Sukerfeest''' is nen feestdag waorop [[moslim|moslims]] t ende van de [[ramadan]] viert. Der wöd völle egaeten, wat in de ramadan tussen zonsopgang en zonsondergang verbaoden is, met veural veur de kinder völle snoop en zeutigheid, vandaor de name.
 
 {{Begin|act}}
