--- a/Amsterdam.mw
+++ b/Amsterdam.mw
@@ -5,8 +5,8 @@
 | lokasie-svg = LocatieAmsterdam.svg
 | previnsie = [[Noord-Hollaand|Noord-Ollaand]]
 | heufplaose = '''Amsterdam'''
-| inwoeners = 868.252<ref>[http://statline.cbs.nl/StatWeb/publication/?DM=SLNL&PA=37230NED&D1=0,17&D2=121&D3=l&HDR=T&STB=G1,G2&VW=T CBS StatLine]</ref>
-| daotum inwoeners = aug 2019
+| inwoeners = 905.000<ref>[http://statline.cbs.nl/StatWeb/publication/?DM=SLNL&PA=37230NED&D1=0,17&D2=121&D3=l&HDR=T&STB=G1,G2&VW=T CBS StatLine]</ref>
+| daotum inwoeners = april 2022
 | oppervlak = 219,49
 | oppervlak laand = 165,50
 | oppervlak waoter = 53,99
@@ -25,7 +25,7 @@
 
 Amsterdam et zeen naam te danken an de anlegging van n dam in de [[13e eeuw|13e ieuw]] an de Amstel (''Amsteldam''). Roend [[1300]] krieg et [[stadsrechten]], in gruuide in de [[Gouwen Ieuw]] eut tot ien van de belangrikste angelssteden ter wärreld. Bevolkingsgruui leidde vanof et eande van de [[16e eeuw|16e ieuw]] tot stadseutbreidingen, waoronger de [[grachtengordel]], die op de [[UNESCO]]-[[Wärreldörfgoedliest]] stot in tot dé bezienswaardigeden van de stad beoort. Angere attraksies binnen museums, zo as et [[Rieksmuseum Amsterdam|Riksmuseum]], et [[Stedelik Museum (Amsterdam)|Stedelik Museum]] in et [[Van Gogh Museum]], et [[Anne Frank Eus]], [[de Wallen]] in de [[dreugkafee|droogkafees]]. Amsterdam et twie [[universiteit]]en in et de mieste nasionaoliteiten ter wärreld.<ref>[http://www.trouw.nl/nieuws/nederland/article1670842.ece Amsterdam stad met meeste nationaliteiten (177) ter wereld], Trouw, 22 augustus 2007</ref><ref>[http://amsterdam.nl/nieuws/@340049/inwoneraantal/ Inwoneraantal Amsterdam blijft groeien stad telt 178 nationaliteiten; één meer dan in 2009], Gemeente Amsterdam, 29 juni 2010</ref>
 
-Eand augustus 2019 ad de gemiente Amsterdam 868,252 inwoeners. Op 1 december 2012 aolde de gemiente vor et eerst sinds de jaoren zuventig et inwoenerantal van 800.000. De [[Metropoolregio Amsterdam]], waortoe onger angere [[Almere]], [[Et Gooi]], [[Haarlem|Aarlem]], [[Zaanstad]] in [[Purmerend]] beoren, et ongeveer 2,4 miljoen inwoners. Amsterdam is värder ok ien van de steden in de [[Raandstad (gebeed)|Raandstad]]. De stad zelf is ongerverdield in verskillende [[Stad (woonstee)|stadsdielen]] die wier ongerverdield binnen in buurten in wikken. 
+Eand maart 2022 ad de gemiente Amsterdam 905.000 inwoeners. Op 1 december 2012 aolde de gemiente vor et eerst sinds de jaoren zuventig et inwoenerantal van 800.000. De [[Metropoolregio Amsterdam]], waortoe onger angere [[Almere]], [[Et Gooi]], [[Haarlem|Aarlem]], [[Zaanstad]] in [[Purmerend]] beoren, et ongeveer 2,4 miljoen inwoners. Amsterdam is värder ok ien van de steden in de [[Raandstad (gebeed)|Raandstad]]. De stad zelf is ongerverdield in verskillende [[Stad (woonstee)|stadsdielen]] die wier ongerverdield binnen in buurten in wikken. 
 
 == Zustersteden ==
 Amsterdam et [[stedenbaand]]en mit de volgende steden:
