--- a/Partij_van_de_Arbeid.mw
+++ b/Partij_van_de_Arbeid.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:PvdA logo (2018–present).svg|thumb|300px|Logo van de PvdA sund 2008]]
-De '''Partij van de Arbeid''' (Parti'je van den Arbeid) of PvdA is ne Nederlaandse landelike politieke parti'je die op 9 februari [[1946]] is op erich. De politieke streuming van de PvdA wörd [[progressief (politiek)| progressief]] en [[sosiaaldemokraties]] eneumd. Internatsionaal ezene mek ze deel oet van de [[Partij van de Europese Sociaaldemocraten|Parti'je van de Europese Sosiaaldemokraten]]. [[Lodewijk Asscher]] is sund 2016 den politieken anvoerder maar is in 2021 op estapt vanweage zien rolle bie de [[Toeslagenaffaire]]. [[Lilliane Ploumen]] is now de parti'jleider. [[Hans Spekman]] was van 2012 töt den [[parti'jveurzitter]]. Sund 2017 is det [[Nelleke Vedelaar]]. In den [[Tweeden Kamer]] haalden de parti'je in 2012 38 zettels, in 2017 9 zettels.
+De '''Partij van de Arbeid''' (Parti'je van den Arbeid) of PvdA is ne Nederlaandse landelike politieke parti'je die op 9 februari [[1946]] is op erich. De politieke streuming van de PvdA wörd [[progressief (politiek)| progressief]] en [[sosiaaldemokraties]] eneumd. Internatsionaal ezene mek ze deel oet van de [[Partij van de Europese Sociaaldemocraten|Parti'je van de Europese Sosiaaldemokraten]]. [[Lodewijk Asscher]] is sund 2016 den politieken anvoerder maar is in 2021 op estapt vanweage zien rolle bie de [[Toeslagenaffaire]]. [[Lilliane Ploumen]] was van 2021 töt 2022 den politieken anvoerder. [[Attje Kuiken]] is now de parti'jleider. [[Hans Spekman]] was van 2012 töt 2017 en [[Nelleke Vedelaar]] van 2017 töt 2021 den [[parti'jveurzitter]]. Sund 2021 is det [[Esther-Mirjam Sent]]. In den [[Tweeden Kamer]] haalden de parti'je in 2012 38 zettels, in 2017 en 2021 9 zettels.
 
 {{Dialekt|act}}
 
