*Empty MediaWiki Message*

--- a/Family_Guy.mw
+++ b/Family_Guy.mw
@@ -1,4 +1,4 @@
-[[Bestaand:Family Guy television set.svg|thumb|right]]
+[[Bestaand:Family Guy logo.svg|thumb|right]]
 '''Family Guy''' is ne [[Verenigde Stoaten|Amerikaanse]] tekenfilmriege aover ne familie in de fiktive stad Quahog. De riege wörd sinds 1999 deur [[Seth MacFarlane]] emaakt veur [[FOX]]. In 2002 wier de produksie stop-ezet, maor deur positive reaksies op de [[dvd]] en de herhalingen wörd der sinds 2005 weer nieje afleveringen produseerd.
 
 De riege wörd in Nederland sinds [[17 september]] [[2007]] uutezonden deur [[Comedy Central]]. Eerder wier de riege al uutezonden deur [[NET 5]]. In Amerika wörd de riege uutezonden deur FOX.
