--- a/Leegsaksische_vlaag.mw
+++ b/Leegsaksische_vlaag.mw
@@ -44,7 +44,7 @@ Ofbeelding:Hanse_Stettin.svg|{{center|[[Stetten]]}}
 == Vlaag van t Nederlaands Leegsaksisch ==
 [[Bestaand:Intersaksische vlagge 3.svg|thumb|Vlaag veur t Leegsaksisch]]
 [[Bestaand:Noordlandflagg.svg|thumb|De Noordlandflagg]]
-[[Bestaand:Achterhook_vlagge.png|thumb|De Aachterhoukse vlaag]]
+[[Bestaand:Flag of Achterhoek.svg|thumb|De Aachterhoukse vlaag]]
 [[Bestaand:Veluwse vlagge.png|thumb|Vlaag veur de Veluwe]]
 Dizze vlaag is ontworpen en verkozen deur de gemainschop van de [[Leegsaksische Wikipedie]] ter promotie van de Leegsaksische toal en kultuur. De vlaag wordt deur nog gain ìnkelde organisoatsie erkend.
 
