*Empty MediaWiki Message*

--- a/Laoren_(Noord-Holland).mw
+++ b/Laoren_(Noord-Holland).mw
@@ -19,7 +19,7 @@ postkode = 1250, 1251 |
 webstie = [http://www.laren.nl/ www.laren.nl] |
 }}
 
-'''Laoren''' ([[Nederlaans|Nederlands]]: ''Laren'')  is n darp en gemeente in de Nederlandse provinsie [[Noord-Holland]] en hef ne oppervlakte van 12,37 km² (waorvan 0,19 km² water). Binnen de gemeentegrenze ligt gin andere darpen. Van oorsprong is t n brink- of [[esdarp]].
+'''Laoren''' ([[Nederlaans|Nederlaans]]: ''Laren'')  is ne plaatse en gemeante in de Nederlaanse previnsie [[Noord-Holland]] en hef ne oppervlakte van 12,37 km² (waorvan 0,19 km² water). Binnen de gemeantegrenze ligt gin andere darpen. Van oorsprong is t n brink- of [[esdarp]].
 
 == Geschiedenis ==
 Laoren is ene van de oldste bebouwde plekken in [[t Gooi]]. In 1085 stichtten den bisschop van Aartsbisdom Utrecht het kapittel Sint-Jansbasiliek op de bulte dee noe bekend steet as Sint-Janskarkhof. Naor den plek van disse kapelle en begraofplaatse loopt van oldsher Gooise [[doodwaege]] uut alle richtingen.
