*Empty MediaWiki Message*

--- a/Huzen.mw
+++ b/Huzen.mw
@@ -18,7 +18,7 @@
 | postkode = 1270-1277
 | webstie = [http://www.huizen.nl/ www.huizen.nl]
 }}
-'''Huzen''' is n darp en gemeente in de Nederlandse previnsie [[Noord-Hollaand]] in de streake [[et Gooi]] en hef ne oppervlakte van 23,33 km² (woarvan 0,35 km² water). De plaatse hef ne verholdingsgewies jongen bevolking.
+'''Huzen''' is ne plaatse en gemeante in de Nederlaanse previnsie [[Noord-Hollaand]] in de streake [[et Gooi]] en hef ne oppervlakte van 23,33 km² (woarvan 0,35 km² water). De plaatse hef ne verholdingsgewies jongen bevolking.
 
 == Geskiednis ==
 Et darp Huzen is bekand as veurmoalig vissersdarp, howal pas an et ende van de 17e eeuwe de visseri-je éne van de veurnoamste middelen van et bestoan wierd. Doorveur waren veural [[laandbouw]] en huusni-jverheid ne belangrieke leavensbronne. Howal et gemeentewoapen van Huzen, een melkdearntjen, verwis noar veeteelt, was doar gene sproake van veeteelt van belang. De arme zaandgronden van Et Gooi hadden völle bemesting neudig en veural de uutwarpselen van et vee, beestn en schoapen, wierden as mest ebroekt. Doar was gemeenschoppelek gebruuk van heiden en weiden, de zogeneumde [[meent]]-groanden. Huzen kreg in de 14de eeuwe heuren name, umdat -noar verluudt- zi-j et eerste darp was in [[et Gooi]] dat steenhuzen had. Het ovverweagend prottestantse Huzen is noe de snelst greujende gemeente van et Gooi, met ok de snelst greujende bedrievigheid.
