*Empty MediaWiki Message*

--- a/Blaricum.mw
+++ b/Blaricum.mw
@@ -18,7 +18,7 @@
 | postkode = 1260, 1261
 | webstie = [http://www.bergen-nh.nl/ www.bergen-nh.nl]
 }}
-'''Blaricum''' is ne plaatse en gemeente in de Nederlandse previnsie [[Noord-Hollaand]] en hef een oppervlakte van 15,59 km². Met een deursnee huze weerde van € 539.000 was zee volgens et Centraal Bureau veur de Statistiek in [[2007]] de op twee noa riekste gemeente van Nederlaand. Blaricum genöt in de umstreaken anzeen om ziene joarlekse karmisdage in augustus.
+'''Blaricum''' is ne plaatse en gemeante in de Nederlaanse previnsie [[Noord-Hollaand]] en hef een oppervlakte van 15,59 km². Met een deursnee huze weerde van € 539.000 was zee volgens et Centraal Bureau veur de Statistiek in [[2007]] de op twee noa riekste gemeante van Nederlaand. Blaricum genöt in de umstreaken anzeen om ziene joarlekse karmisdage in augustus.
 
 Blaricum ligt in den laandstreek 'Het Gooi'. Net as et noabi-j elegen [[Laoren (Noord-Holland)|Laoren]] is het van eurspronk een brinkdarp woarvan nog völle boerderi-jen oaver bunt ebleven. Rond et begin van de twintigste eeuwe kwamen in Blaricum völle rieke [[Amsterdam]]mers en kunstenoars wonnen, woardeur et darp stark in anzeen steeg. 
 
