*Empty MediaWiki Message*

--- a/T_Veen.mw
+++ b/T_Veen.mw
@@ -20,7 +20,7 @@ netnummer = 0318 |
 postcode = 3901 - 3906 |
 webstee = [http://www.veenendaal.nl/ www.veenendaal.nl] |
 }}
-'''t Veen''' ([[Nederlaands]]: ''Veenendaal'') is n plaots en n gemeente in de [[Nederlaand|Nederlandse]] [[provinsie]] [[Utrecht (provinsie)|Utrecht]], t leit an de [[Utrechtse Heuvelrug (stuwwal)|Utrechtse Heuvelrug]] en de [[Gelderse Vallei]]. De gemeente had op [[31 mei]] [[2009]] 63.022 inwoeners en t het n oppervlakte van 19,72 [[vierkaante kilemeter|km²]] (waorvan 0,21 km² [[woater|waoter]]). t Darp is in de [[15e eeuw|vuuftiende]] en [[16e eeuw|zestiende eeuw]] ontstaon as [[veenkolonie]]. Hier leit dan oek de oorsprong van de naam. In disse tied wordde veur de ofvoer van turf de bisschop Davidsgrift an-eleid. Langerst de Grift en de ziedkanaolen gingen laoter minsen woenen. 
+'''t Veen''' ([[Nederlaands]]: ''Veenendaal'') is n darp en n gemeente in de [[Nederlaand|Nederlandse]] [[provinsie]] [[Utrecht (provinsie)|Utrecht]], t leit an de [[Utrechtse Heuvelrug (stuwwal)|Utrechtse Heuvelrug]] en de [[Gelderse Vallei]]. De gemeente had op [[31 mei]] [[2009]] 63.022 inwoeners en t het n oppervlakte van 19,72 [[vierkaante kilemeter|km²]] (waorvan 0,21 km² [[woater|waoter]]). t Darp is in de [[15e eeuw|vuuftiende]] en [[16e eeuw|zestiende eeuw]] ontstaon as [[veenkolonie]]. Hier leit dan oek de oorsprong van de naam. In disse tied wordde veur de ofvoer van turf de bisschop Davidsgrift an-eleid. Langerst de Grift en de ziedkanaolen gingen laoter minsen woenen. 
 
 Deur veul minsen wort t Veen as stad ezien en oek zo eneumd, mar wat ze vaak vergeten is dat t Veen nooit [[stadsrechten]] ehad het. t Veen was tot de tweede helft van de [[20e eeuw]] verdeeld over twee provinsies, Utrecht en [[Gelderlaand|Gelderland]]: Utrechts ('Stichts') t Veen en t Gelderse Veen (Gelders Veenendaal). Eerst in 1960 wordde t Veen deur n grenskorreksie één gemeente mit n oppervlakte van zo'n achttien [[vierkaante kilemeter|vierkante kilometer]] en (toe nog) ruum drieëntwintigduzend inwoeners.
 
