--- a/Renswou.mw
+++ b/Renswou.mw
@@ -20,7 +20,7 @@ netnummer = 0318 |
 postcode = 3927 |
 webstee = [http://www.renswoude.nl/ www.renswoude.nl] |
 }}
-'''Renswou''' ([[Nederlaands]]: ''Renswoude'') is n [[gemiente (bestuur)|gemeente]] en n plek in de [[Nederlaand|Nederlaandse]] provinsie Utrecht. 
+'''Renswou''' ([[Nederlaands]]: ''Renswoude'') is n [[gemiente (bestuur)|gemeente]] en n darp in de [[Nederlaand|Nederlaandse]] provinsie Utrecht.
 
 ==Geschiedenis==
 Al in 855 wordt Renswou as ''silva Hrenhem'' (t Rhenense woud) genoemd in n oorkonde. De nederzetting Renswou is veul minder oud. Die ontston eigenlik veul laoter rondom 1400. Renswou beston toe uut n verstaarkt huus, de Borgwal genoemd, en n paor [[boerderieje|boerderijen]] rondom t gebied. In 1638 stichtte [[Johan van Reede]] n daarp bie de veurmaolige Borgwal. Dit beston uut de Daarpstraot van noe, mit hierlangs wat [[lientbebouwing]]. Hiernaost ontstonnen der nog twee achterwegen, de Meulstraot en de Kaarkstraot van vandaog. Ok liet Van Reede t [[kasteel van Renswou]] (1654) en de [[koepelkarke|koepelkaark]] (1639) bouwen (Wolleswinkel, 1998).
