Wysigingen döär [[Special:Contributions/82.72.174.38|82.72.174.38]] ([[User talk:82.72.174.38|oaverleg]]) weaderümmedraid tot de lätste versy van [[User:Ni'jluuseger|Ni'jluuseger]]

--- a/Aalsmeer.mw
+++ b/Aalsmeer.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Aalsmeer_stroate.jpg|thumb|250px|Straote in Aalsmeer]]
-'''Aalsmeer''' is ne plaatse en gemeante in de Nederlaanse previnsie [[Noord-Hollaand]]. De gemeente telt 26.569 inwonners (1 februari 2008, bron: CBS) en hef n oppervlakte van 34,40 km² (waorvan 11,71 km² water). De gemeante Aalsmeer maek deel uut van de 'plusregio Stadsregio Amsterdam'. Nen inwonner van Aalsmeer wödt nen 'Aalsmeerder' eneumd.
+'''Aalsmeer''' is een darp en gemeente in de Nederlaandse previnsie [[Noord-Hollaand]]. De gemeente telt 26.569 inwonners (1 februari 2008, bron: CBS) en hef n oppervlakte van 34,40 km² (waorvan 11,71 km² water). De gemeente Aalsmeer maek deel uut van de 'plusregio Stadsregio Amsterdam'. Nen inwonner van Aalsmeer wödt nen 'Aalsmeerder' eneumd.
 
 == Geskiednis ==
 Aalsmeer wödt veur t eerst eneumd in [[1133]] as 'Alsmar'. Dizzen naam kump veur in ne oorkonde waorbi'j laand egaeven wödt an de abdi'je van Rijnsburg, een adellik nonnenkloster. In ne akte van [[Diederik VII van Kleef]] wödt dizze schenking in [[1199]] nog ens bevestigd. t Gebeed Alsmar was in dee tied n wildernis van laege elzen- en wilgenböskes. In de umgaeving wödt völle turf estokken, waordeur grote meren en plessen bunt ontstaon.
