Wysigingen döär [[Special:Contributions/82.72.174.38|82.72.174.38]] ([[User talk:82.72.174.38|oaverleg]]) weaderümmedraid tot de lätste versy van [[User:Ranbovw|Ranbovw]]

--- a/Weesp.mw
+++ b/Weesp.mw
@@ -19,7 +19,7 @@ postkode = 1380-1383 |
 webstie = [http://www.weesp.nl www.weesp.nl] |
 }}
 
-'''Weesp''' is ne [[vesten]]stad en veurmaolige [[gemiente (bestuur)|gemiente]] in de Nederlaanse previnsie [[Noord-Hollaand]] en hef ne oppervlaakte van 21,88 km² (woarvan 1,21 km² water). Weesp hef nen steadenbaand mit [[Svitavy]] in [[Tsjechië]]. 
+'''Weesp''' is ne [[vesten]]stad en veurmaolige [[gemiente (bestuur)|gemeente]] in de Nederlandse previnsie [[Noord-Hollaand]] en hef ne oppervlaakte van 21,88 km² (woarvan 1,21 km² water). Weesp hef nen steadenbaand mit [[Svitavy]] in [[Tsjechië]]. 
 
 Op 24 meert 2022 is Weesp op-egaon in de gemeente [[Amsterdam]].
 
