--- a/Griekse_alfabet.mw
+++ b/Griekse_alfabet.mw
@@ -20,7 +20,7 @@ De [[Grieks|Griekse toal]] wordt schreven ien t '''Griekse alfabet'''. Dit [[alf
 |β
 |b
 |v
-|Bêta
+|Bèta
 |-
 |Γ
 |γ
@@ -44,25 +44,25 @@ De [[Grieks|Griekse toal]] wordt schreven ien t '''Griekse alfabet'''. Dit [[alf
 |ζ
 |z
 |z
-|Dzêta
+|Dzèta
 |-
 |Η
 |η
 |ê
 |i
-|Êta
+|Èta
 |-
 |Θ
 |θ
 |th
 |th
-|Thêta
+|Thèta
 |-
 |Ι
 |ι
 |i
 |i
-|Iota
+|Jota
 |-
 |Κ
 |κ
@@ -92,13 +92,13 @@ De [[Grieks|Griekse toal]] wordt schreven ien t '''Griekse alfabet'''. Dit [[alf
 |ξ
 |x/ks
 |x
-|Xi
+|Ksi
 |-
 |Ο
 |ο
 |o
 |o
-|Omicron
+|Omikron
 |-
 |Π
 |π
@@ -110,7 +110,7 @@ De [[Grieks|Griekse toal]] wordt schreven ien t '''Griekse alfabet'''. Dit [[alf
 |ρ
 |r
 |r
-|Rhô
+|Rho
 |-
 |Σ
 |σ, ς
