--- a/Midden-Drenthe.mw
+++ b/Midden-Drenthe.mw
@@ -43,7 +43,7 @@ Antal inwoners per woonkern op 1 jannewaori 2004<ref>Bron: [http://www.cbs.nl/ C
 |-
 | [[Hoogersmilde]] || align="right"| 1460 || [[Spier (Drenthe)|Spier]] || align="right"| 200
 |-
-| [[Eursinge (Midden-Drenthe)|Eursinge]] || align="right"| 60 || [[Hooghaolen]] || align="right"| 940
+| [[Eursinge (Midden-Drenthe)|Eursinge]] || align="right"| 60 || [[Haolen|Hooghaolen]] || align="right"| 940
 |-
 | [[Maanting]] || align="right"| 180 || [[Drieber]] || align="right"| 120
 |-
