--- a/Haolen.mw
+++ b/Haolen.mw
@@ -1,1 +1,1 @@
-'''Hålen''' ([[neaderlandsk]]: ''Hooghalen'') is en esdörp in de gemeynde [[Midden-Drenthe|Middendrente]] in de neaderlandske provinsy [[Drenthe|Drente]]. Under et gebeed van de plaatse völt ouk de büürtskappen Lääghålen, Lääghålervene en Ousthålen.
+'''Hålen''' ([[neaderlandsk]]: ''Hooghalen'') is en esdörp in de gemeynde [[Midden-Drenthe|Middendrente]] in de [[neaderland]]ske provinsy [[Drenthe|Drente]]. Under et gebeed van de plaatse völt ouk de büürtskappen Lääghålen, Lääghålervene en Ousthålen.
