*Empty MediaWiki Message*

--- a/Guadalajara.mw
+++ b/Guadalajara.mw
@@ -1,4 +1,4 @@
-'''Guadalajara''' is een stad in Mexico, [[hoofdstad (politiek)|hoofdstad]] van de staat [[Jalisco]]. Het is gelegen in het westen van het land, in het geografische gebied dat bekend staat als [[Valle de Atemajac]]. De stad wordt beschouwd als een van de belangrijkste politieke, economische, sociale, culturele en toeristische centra van [[Mexico]].<ref>{{Cita web|url=https://www.visitmexico.com/jalisco/guadalajara | title=Bezoek Mexico {{!}} is {{!}} Jalisco {{!}} Guadalajara|accessdate=2022-01-21|surname=www.visitmexico.com|website=Bezoek Mexico/|language=es} } </ref> Guadalajara is ook bekend als "La Perla Tapatia", "La Perla de Occidente" en "La Ciudad de las Rosas".
+'''Guadalajara''' is een stad in Mexico, [[hoofdstad (politiek)|hoofdstad]] van de staat [[Jalisco]]. Het is gelegen in het westen van het land, in het geografische gebied dat bekend staat als [[Valle de Atemajac]]. De stad wordt beschouwd als een van de belangrijkste politieke, economische, sociale, culturele en toeristische centra van [[Mexico (laand) ]].<ref>{{Cita web|url=https://www.visitmexico.com/jalisco/guadalajara | title=Bezoek Mexico {{!}} is {{!}} Jalisco {{!}} Guadalajara|accessdate=2022-01-21|surname=www.visitmexico.com|website=Bezoek Mexico/|language=es} } </ref> Guadalajara is ook bekend als "La Perla Tapatia", "La Perla de Occidente" en "La Ciudad de las Rosas".
 
 De naam komt van [[Arabische taal|Arabisch]], wat "rivier van stenen", "rivier die tussen stenen loopt" of "vallei van forten" betekent.<ref>{{Cite web|url=https:// guadalajara .gob.mx/gdlWeb/#/historia|título=Regering van Guadalajara|dateacceso=2022-01-21|sitioweb=guadalajara.gob.mx}}</ref> De stad kreeg zijn naam van [[Nuño de Guzmán | Nuño Beltrán de Guzmán]], ter ere van de Spaanse stad waar hij werd geboren. Guadalajara werd bij vier verschillende gelegenheden gesticht en werd definitief opgericht door Beatriz Hernández op 14 februari 1542, aan de oevers van de rivier [[Río San Juan de Dios|San Juan de Dios]].
 
