--- a/Guadalajara.mw
+++ b/Guadalajara.mw
@@ -1,11 +1,11 @@
-'''Guadalajara''' is een stad in Mexico, [[hoofdstad (politiek)|hoofdstad]] van de staat [[Jalisco]]. Het is gelegen in het westen van het land, in het geografische gebied dat bekend staat als [[Valle de Atemajac]]. De stad wordt beschouwd als een van de belangrijkste politieke, economische, sociale, culturele en toeristische centra van [[Mexico (laand) ]].<ref>{{Cita web|url=https://www.visitmexico.com/jalisco/guadalajara | title=Bezoek Mexico {{!}} is {{!}} Jalisco {{!}} Guadalajara|accessdate=2022-01-21|surname=www.visitmexico.com|website=Bezoek Mexico/|language=es} } </ref> Guadalajara is ook bekend als "La Perla Tapatia", "La Perla de Occidente" en "La Ciudad de las Rosas".
+'''Guadalajara''' is ne stad in [[Meksiko]], [[heufdstad|höyvdstad]] van den ståt [[Jalisco|Jalisko]]. Et is eleagen in et westen van et land, in et geografiske gebeed dat bekend steyt as [[Valle de Atemajac]]. De stad wördt beskowd as eyne van de belangrykste politike, ekonomiske, sociale, kulturele en turistiske centra van [[Mexico (laand)|Meksiko]].<ref>{{Cite web|url=https://www.visitmexico.com/jalisco/guadalajara | title=Besöök Mexico {{!}} is {{!}} Jalisco {{!}} Guadalajara|accessdate=2022-01-21|surname=www.visitmexico.com|website=Bezoek Mexico/|language=es} } </ref> Guadalajara is ouk bekend as "La Perla Tapatia", "La Perla de Occidente" en "La Ciudad de las Rosas".
 
-De naam komt van [[Arabische taal|Arabisch]], wat "rivier van stenen", "rivier die tussen stenen loopt" of "vallei van forten" betekent.<ref>{{Cite web|url=https:// guadalajara .gob.mx/gdlWeb/#/historia|título=Regering van Guadalajara|dateacceso=2022-01-21|sitioweb=guadalajara.gob.mx}}</ref> De stad kreeg zijn naam van [[Nuño de Guzmán | Nuño Beltrán de Guzmán]], ter ere van de Spaanse stad waar hij werd geboren. Guadalajara werd bij vier verschillende gelegenheden gesticht en werd definitief opgericht door Beatriz Hernández op 14 februari 1542, aan de oevers van de rivier [[Río San Juan de Dios|San Juan de Dios]].
+De name kömt van et [[arabisk]], wår et "rivyr van steynen", "rivyr dee tüsken steynen loupet" of "vallei van forten" beteykent.<ref>{{Cite web|url=https:// guadalajara .gob.mx/gdlWeb/#/historia|título=Regering van Guadalajara|dateacceso=2022-01-21|sitioweb=guadalajara.gob.mx}}</ref> De stad kreg öäre name van [[Nuño de Guzmán | Nuño Beltrán de Guzmán]], ter ere van de spaanske stad waar hy wear geboaren. Guadalajara wear by veer verskillende geleagenheyden esticht en wear definitif upericht döär Beatriz Hernández up 14 februari 1542, an de overs van de rivyr [[Río San Juan de Dios|San Juan de Dios]].
 
-Tijdens de [[Onderkoninkrijk Nieuw-Spanje|Onderkoninkrijk Nieuw-Spanje]] werd Guadalajara officieel de hoofdstad van [[Nieuw-Galicië]]. In de [[Mexicaanse onafhankelijkheid]] speelde Guadalajara een cruciale rol, aangezien op 6 december 1810 [[Miguel Hidalgo y Costilla|Miguel Hidalgo]] de slavernij in de stad afschafte. Later, in de [[Hervormingsoorlog]], verhuisde [[Benito Juárez]] zijn regering in 1858 naar Guadalajara vanwege geschillen tussen liberalen en conservatieven. Tijdens de [[Mexicaanse Revolutie|Mexicaanse Revolutie]] waren de gevolgen in de regio meer sociaal dan militair, wat de intrede van het [[Constitutionalistische leger]] op 8 juli 1914 benadrukte. Tijdens de tweede helft van de [[XX eeuw] ] kende de stad een periode van sociale stabiliteit en commerciële en industriële groei.
+Ten tyde van et [[Onderkoninkrijk Nieuw-Spanje|Underköäningryk Ny-Spanje]] wear Guadalajara officiel de höyvdstad van [[Ny-Galicie]]. By de [[Mexicaanse onafhankelijkheid|Meksikaanske unafhangelikheyd]] spölden Guadalajara ne kruciale rol, ümdat [[Miguel Hidalgo y Costilla|Miguel Hidalgo]] up 6 december 1810 de slaverny in de stad afschafden. Later, in de [[Hervormingsoorlog]], verhuseden [[Benito Juárez]] syne regering in 1858 når Guadalajara vanweagen geschillen tüsken liberalen en konservativen. Tydens de [[Mexicaanse Revolutie|Meksikaanske Revolutsy]] waren de gevolgen in de regio meyr sociaal as militair, wat den kumst van et [[konstitutionalistiske leager]] up 8 juli 1914 benadrukkeden. Tydens de tweyde hälfde van de [[20e eywe]] kenden de stad ne periode van sociale stabiliteit en kommerciele en industriele gröi.
 
-Guadalajara begrenst in het noorden met [[Ixtlahuacán del Río]], in het oosten met [[Tonalá (Jalisco)|Tonalá]] en [[Zapotlanejo]], in het zuiden met [[Tlaquepaque]] en in het westen met [ [Zapopan]]. . Het heeft een populatie van {{esd|1.385.629}} inwoners, maar het grootstedelijk gebied bereikt een geschatte populatie van {{esd|5.179.874}} inwoners. Het is de achtste meest bevolkte stad in [[Latijns-Amerika]], na [[Mexico-Stad]], [[São Paulo]], [[Buenos Aires]], [[Rio de Janeiro]], [[Lima ]] , [[Bogotá]] en [[Santiago de Chile|Santiago]], evenals de vijfde in [[Noord-Amerika]] na [[Mexico City]], [[New York]], [ [Los Angeles]] , [[Chicago]] en [[Toronto]].<ref>{{Web citation|url=https://www.jalisco.gob.mx/es/jalisco/guadalajara|title=grootstedelijk gebied van Guadalajara {{! }} Regering van de staat Jalisco|fechaacceso=2022-01-21|sitioweb=www.jalisco.gob.mx}}</ref>
+Guadalajara grenst in et noorden an [[Ixtlahuacán del Río]], in et ousten an [[Tonalá (Jalisco)|Tonalá]] en [[Zapotlanejo]], in et süden an [[Tlaquepaque]] en in et westen an [[Zapopan]]. Et hevt ne bevölking van 1.385.629 inwöäners, terwyl et groutstedelik gebeed hevt ne bevölking van 5.179.874 inwöäners hevt. Et is de achtste stad når bevölking in [[Latijns-Amerika|Latynsk-Amerika]], nå [[Mexico-Stad|Meksiko-Stad]], [[São Paulo]], [[Buenos Aires]], [[Rio de Janeiro]], [[Lima]], [[Bogotá]] en [[Santiago de Chile|Santiago]], en ouk de vyvde in [[Noord-Amerika]] nå [[Meksiko-Stad]], [[Ny-York]], [[Los Angeles]], [[Chicago]] en [[Toronto]].<ref>{{Web citation|url=https://www.jalisco.gob.mx/es/jalisco/guadalajara|title=grootstedelik gebeed van Guadalajara {{! }} Regering van de ståt Jalisko|fechaacceso=2022-01-21|sitioweb=www.jalisco.gob.mx}}</ref>
 
-Vanwege zijn invloed en internationale bereik werd het in 2016 gecatalogiseerd als [[global city]] en als een van de 90 meest productieve steden ter wereld, met een score van 56,3.<ref>{{web citation|url =https:/ /www.lboro.ac.uk/gawc/world2016t.html|title=De wereld volgens GaWC 2016|accessdate=25 januari 2021|website=Loughborough University|language=EN}}</ref>< ref>{ {webquote|url=http://www.managementthinking.eiu.com/sites/default/files/downloads/Hot%20Spots.pdf|title=HotspotsBenchmarking van het concurrentievermogen van steden in de wereld|accessdate=1 november 2013| language= EN|archiveur=https://web.archive.org/web/20131101082038/http://www.managementthinking.eiu.com/sites/default/files/downloads/Hot%20Spots.pdf|archivedate=1 november , 2013}}</ref> Op nationaal niveau is het de [[Bijlage:Steden naar BBP|derde economische kern]] van het land, met een [[Bruto Binnenlands Product|BBP]] van 124.047 miljoen dollar in 2019. De economie van de stad is gebaseerd op handel, diensten en industrie. stria, vooral de technologie-industrie vanwege het grote aantal internationale bedrijven die hun hoofdkantoor in de stad hebben, en daarom staat het bekend als de [[Silicon Valley]] van [[Mexico]].<ref>{{Nieuwscitaat| title =De Mexicaanse Silicon Valley ligt in Jalisco|url=https://elpais.com/tecnologia/2017/03/12/actualidad/1489275848_767120.html|periodico=El País|fecha=2017-03-13|fechaacceso=2022 - 01-21|issn=1134-6582|language=es|name=Sonia|achternaam=Corona}}</ref>
+Vanweagen öäre invlood en internationale bereik wear et in 2016 ekatalogiseerd as [[global city]] en as eyne van de 90 meyst produktive steden ter wearld, med ne score van 56,3.<ref>{{web citation|url =https:/ /www.lboro.ac.uk/gawc/world2016t.html|title=De wearld völgens GaWC 2016|accessdate=25 januari 2021|website=Loughborough University|language=EN}}</ref>< ref>{ {webquote|url=http://www.managementthinking.eiu.com/sites/default/files/downloads/Hot%20Spots.pdf|title=HotspotsBenchmarking van et konkurrentsyvermogen van steden in de wearld|accessdate=1 november 2013| language= EN|archiveur=https://web.archive.org/web/20131101082038/http://www.managementthinking.eiu.com/sites/default/files/downloads/Hot%20Spots.pdf|archivedate=1 november , 2013}}</ref> Up nationaal nivo is et den [[Bijlage:Steden naar BBP|darden ekonomisken kern]] van et land, med en [[Bruto Binnenlands Product|BBP]] van 124.047 miljoon dollar in 2019. De ekonomy van de stad is ebaseerd up handel, deensten en industry. Industry, vöäral de technologiske industry vanweagen et grouten antal internationale bedryven dee öär höyvdkantoor in de stad hebbet en dårum steyt et bekend as de [[Silicon Valley]] van [[Mexico|Meksiko]].<ref>{{Nieuwscitaat| title =De meksikaanske Silicon Valley ligt in Jalisko|url=https://elpais.com/tecnologia/2017/03/12/actualidad/1489275848_767120.html|periodico=El País|fecha=2017-03-13|fechaacceso=2022 - 01-21|issn=1134-6582|language=es|name=Sonia|achternaam=Corona}}</ref>
 
-Het wordt beschouwd als een belangrijk cultureel centrum en referentiepunt voor [[Mexico]] in het buitenland, aangezien [[Jalisco]] de bakermat is van [[mariachi]], [[charrería]] en [[tequila]]. Guadalajara heeft jaarlijkse evenementen van groot prestige, zoals het [[Guadalajara International Film Festival]] en de [[Guadalajara International Book Fair]], de belangrijkste in de wereld van [[Spaanse taal|Spaanssprekende]] en de op één na grootste in de wereld na [[Frankfurt Book Fair|Frankfurt]], [[Duitsland]].
+Et wördt beskowd as en belangryk kultureel centrum en referentsypünt vöär [[Meksiko]] in et butenland, ümdat [[Jalisko]] den båkermat is van [[mariachi]], [[charrería]] en [[tequila]]. Guadalajara hevt jårlikske evenementen med en grout prestige, sou as et [[Guadalajara International Film Festival]] en de [[Guadalajara International Book Fair]], de belangrykste in de [[Spaans|spaanskspreakende]] wearld en de up eyne nå gröytste in de wearld nå [[Frankfurt Book Fair|Frankfurt]], [[Düütskland]].
