*Empty MediaWiki Message*

--- a/Guadalajara.mw
+++ b/Guadalajara.mw
@@ -1,6 +1,6 @@
-'''Guadalajara''' is ne stad in [[Meksiko]], [[heufdstad|höyvdstad]] van den ståt [[Jalisco|Jalisko]]. Et is eleagen in et westen van et land, in et geografiske gebeed dat bekend steyt as [[Valle de Atemajac]]. De stad wördt beskowd as eyne van de belangrykste politike, ekonomiske, sociale, kulturele en turistiske centra van [[Mexico (laand)|Meksiko]].<ref>{{Cite web|url=https://www.visitmexico.com/jalisco/guadalajara | title=Besöök Mexico {{!}} is {{!}} Jalisco {{!}} Guadalajara|accessdate=2022-01-21|surname=www.visitmexico.com|website=Bezoek Mexico/|language=es} } </ref> Guadalajara is ouk bekend as "La Perla Tapatia", "La Perla de Occidente" en "La Ciudad de las Rosas".
+'''Guadalajara''' is ne stad in [[Meksiko]], [[heufdstad|höyvdstad]] van den ståt [[Jalisco|Jalisko]]. Et is eleagen in et westen van et land, in et geografiske gebeed dat bekend steyt as [[Valle de Atemajac]]. De stad wördt beskowd as eyne van de belangrykste politike, ekonomiske, sociale, kulturele en turistiske centra van [[Mexico (laand)|Meksiko]].<ref>{{Cite web|url=https://www.visitmexico.com/jalisco/guadalajara | title=Besöök Mexico {{!}} is {{!}} Jalisco {{!}} Guadalajara|accessdate=2022-01-21|surname=www.visitmexico.com|website=Bezoek Mexico/|language=es}} </ref> Guadalajara is ouk bekend as "La Perla Tapatia", "La Perla de Occidente" en "La Ciudad de las Rosas".
 
-De name kömt van et [[arabisk]], wår et "rivyr van steynen", "rivyr dee tüsken steynen loupet" of "vallei van forten" beteykent.<ref>{{Cite web|url=https:// guadalajara .gob.mx/gdlWeb/#/historia|título=Regering van Guadalajara|dateacceso=2022-01-21|sitioweb=guadalajara.gob.mx}}</ref> De stad kreg öäre name van [[Nuño de Guzmán | Nuño Beltrán de Guzmán]], ter ere van de spaanske stad waar hy wear geboaren. Guadalajara wear by veer verskillende geleagenheyden esticht en wear definitif upericht döär Beatriz Hernández up 14 februari 1542, an de overs van de rivyr [[Río San Juan de Dios|San Juan de Dios]].
+De name kömt van et [[arabisk]], wår et "rivyr van steynen", "rivyr dee tüsken steynen loupet" of "vallei van forten" beteykent.<ref>{{Cite web|url=https://guadalajara.gob.mx/gdlWeb/#/historia|titel=Regering van Guadalajara|accessdate=2022-01-21|websteade=guadalajara.gob.mx}}</ref> De stad kreg öäre name van [[Nuño de Guzmán | Nuño Beltrán de Guzmán]], ter ere van de spaanske stad waar hy wear geboaren. Guadalajara wear by veer verskillende geleagenheyden esticht en wear definitif upericht döär Beatriz Hernández up 14 februari 1542, an de overs van de rivyr [[Río San Juan de Dios|San Juan de Dios]].
 
 Ten tyde van et [[Onderkoninkrijk Nieuw-Spanje|Underköäningryk Ny-Spanje]] wear Guadalajara officiel de höyvdstad van [[Ny-Galicie]]. By de [[Mexicaanse onafhankelijkheid|Meksikaanske unafhangelikheyd]] spölden Guadalajara ne kruciale rol, ümdat [[Miguel Hidalgo y Costilla|Miguel Hidalgo]] up 6 december 1810 de slaverny in de stad afschafden. Later, in de [[Hervormingsoorlog]], verhuseden [[Benito Juárez]] syne regering in 1858 når Guadalajara vanweagen geschillen tüsken liberalen en konservativen. Tydens de [[Mexicaanse Revolutie|Meksikaanske Revolutsy]] waren de gevolgen in de regio meyr sociaal as militair, wat den kumst van et [[konstitutionalistiske leager]] up 8 juli 1914 benadrukkeden. Tydens de tweyde hälfde van de [[20e eywe]] kenden de stad ne periode van sociale stabiliteit en kommerciele en industriele gröi.
 
