[[:Kategorie:Plaots in Drenthe]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Haolen.mw
+++ b/Haolen.mw
@@ -1,1 +1,3 @@
 '''Hålen''' ([[neaderlandsk]]: ''Hooghalen'') is en esdörp in de gemeynde [[Midden-Drenthe|Middendrente]] in de [[neaderland]]ske provinsy [[Drenthe|Drente]]. Under et gebeed van de plaatse völt ouk de büürtskappen Lääghålen, Lääghålervene en Ousthålen.
+
+[[Kategorie:Plaots in Drenthe]]
