[[:Kategorie:Plaots in Drenthe]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Zwiggelt.mw
+++ b/Zwiggelt.mw
@@ -1,1 +1,3 @@
 '''Zwiggelt''' ([[neaderlandsk]]: ''Zwiggelte'') is en esdörp in de gemeynde [[Midden-Drenthe|Middendrente]] in de [[neaderland]]ske provinsy [[Drente]].
+
+[[Kategorie:Plaots in Drenthe]]
