--- a/Guadalajara.mw
+++ b/Guadalajara.mw
@@ -1,4 +1,4 @@
-'''Guadalajara''' is ne stad in [[Meksiko]], [[heufdstad|höyvdstad]] van den ståt [[Jalisco|Jalisko]]. Et is eleagen in et westen van et land, in et geografiske gebeed dat bekend steyt as [[Valle de Atemajac]]. De stad wördt beskowd as eyne van de belangrykste politike, ekonomiske, sociale, kulturele en turistiske centra van [[Mexico (laand)|Meksiko]].<ref>{{Cite web|url=https://www.visitmexico.com/jalisco/guadalajara | title=Besöök Mexico {{!}} is {{!}} Jalisco {{!}} Guadalajara|accessdate=2022-01-21|surname=www.visitmexico.com|website=Bezoek Mexico/|language=es}} </ref> Guadalajara is ouk bekend as "La Perla Tapatia", "La Perla de Occidente" en "La Ciudad de las Rosas".
+'''Guadalajara''' is ne stad in [[Mexico (laand)|Meksiko]], [[heufdstad|höyvdstad]] van den ståt [[Jalisco|Jalisko]]. Et is eleagen in et westen van et land, in et geografiske gebeed dat bekend steyt as [[Valle de Atemajac]]. De stad wördt beskowd as eyne van de belangrykste politike, ekonomiske, sociale, kulturele en turistiske centra van [[Mexico (laand)|Meksiko]].<ref>{{Cite web|url=https://www.visitmexico.com/jalisco/guadalajara | title=Besöök Mexico {{!}} is {{!}} Jalisco {{!}} Guadalajara|accessdate=2022-01-21|surname=www.visitmexico.com|website=Bezoek Mexico/|language=es}} </ref> Guadalajara is ouk bekend as "La Perla Tapatia", "La Perla de Occidente" en "La Ciudad de las Rosas".
 
 De name kömt van et [[arabisk]], wår et "rivyr van steynen", "rivyr dee tüsken steynen loupet" of "vallei van forten" beteykent.<ref>{{Cite web|url=https://guadalajara.gob.mx/gdlWeb/#/historia|titel=Regering van Guadalajara|accessdate=2022-01-21|websteade=guadalajara.gob.mx}}</ref> De stad kreg öäre name van [[Nuño de Guzmán | Nuño Beltrán de Guzmán]], ter ere van de spaanske stad waar hy wear geboaren. Guadalajara wear by veer verskillende geleagenheyden esticht en wear definitif upericht döär Beatriz Hernández up 14 februari 1542, an de overs van de rivyr [[Río San Juan de Dios|San Juan de Dios]].
 
@@ -6,6 +6,9 @@ Ten tyde van et [[Onderkoninkrijk Nieuw-Spanje|Underköäningryk Ny-Spanje]] wea
 
 Guadalajara grenst in et noorden an [[Ixtlahuacán del Río]], in et ousten an [[Tonalá (Jalisco)|Tonalá]] en [[Zapotlanejo]], in et süden an [[Tlaquepaque]] en in et westen an [[Zapopan]]. Et hevt ne bevölking van 1.385.629 inwöäners, terwyl et groutstedelik gebeed hevt ne bevölking van 5.179.874 inwöäners hevt. Et is de achtste stad når bevölking in [[Latijns-Amerika|Latynsk-Amerika]], nå [[Mexico-Stad|Meksiko-Stad]], [[São Paulo]], [[Buenos Aires]], [[Rio de Janeiro]], [[Lima]], [[Bogotá]] en [[Santiago de Chile|Santiago]], en ouk de vyvde in [[Noord-Amerika]] nå [[Meksiko-Stad]], [[Ny-York]], [[Los Angeles]], [[Chicago]] en [[Toronto]].<ref>{{Web citation|url=https://www.jalisco.gob.mx/es/jalisco/guadalajara|title=grootstedelik gebeed van Guadalajara {{! }} Regering van de ståt Jalisko|fechaacceso=2022-01-21|sitioweb=www.jalisco.gob.mx}}</ref>
 
-Vanweagen öäre invlood en internationale bereik wear et in 2016 ekatalogiseerd as [[global city]] en as eyne van de 90 meyst produktive steden ter wearld, med ne score van 56,3.<ref>{{web citation|url =https:/ /www.lboro.ac.uk/gawc/world2016t.html|title=De wearld völgens GaWC 2016|accessdate=25 januari 2021|website=Loughborough University|language=EN}}</ref>< ref>{{webquote|url=http://www.managementthinking.eiu.com/sites/default/files/downloads/Hot%20Spots.pdf|title=HotspotsBenchmarking van et konkurrentsyvermogen van steden in de wearld|accessdate=1 november 2013| language= EN|archiveur=https://web.archive.org/web/20131101082038/http://www.managementthinking.eiu.com/sites/default/files/downloads/Hot%20Spots.pdf|archivedate=1 november , 2013}}</ref> Up nationaal nivo is et den [[Bijlage:Steden naar BBP|darden ekonomisken kern]] van et land, med en [[Bruto Binnenlands Product|BBP]] van 124.047 miljoon dollar in 2019. De ekonomy van de stad is ebaseerd up handel, deensten en industry. Industry, vöäral de technologiske industry vanweagen et grouten antal internationale bedryven dee öär höyvdkantoor in de stad hebbet en dårum steyt et bekend as de [[Silicon Valley]] van [[Mexico|Meksiko]].<ref>{{Nieuwscitaat| title =De meksikaanske Silicon Valley ligt in Jalisko|url=https://elpais.com/tecnologia/2017/03/12/actualidad/1489275848_767120.html|periodico=El País|fecha=2017-03-13|fechaacceso=2022 - 01-21|issn=1134-6582|language=es|name=Sonia|achternaam=Corona}}</ref>
+Vanweagen öäre invlood en internationale bereik wear et in 2016 ekatalogiseerd as [[global city]] en as eyne van de 90 meyst produktive steden ter wearld, med ne score van 56,3.<ref>{{web citation|url =https:/ /www.lboro.ac.uk/gawc/world2016t.html|title=De wearld völgens GaWC 2016|accessdate=25 januari 2021|website=Loughborough University|language=EN}}</ref>< ref>{{webquote|url=http://www.managementthinking.eiu.com/sites/default/files/downloads/Hot%20Spots.pdf|title=HotspotsBenchmarking van et konkurrentsyvermogen van steden in de wearld|accessdate=1 november 2013| language= EN|archiveur=https://web.archive.org/web/20131101082038/http://www.managementthinking.eiu.com/sites/default/files/downloads/Hot%20Spots.pdf|archivedate=1 november , 2013}}</ref> Up nationaal nivo is et den [[Bijlage:Steden naar BBP|darden ekonomisken kern]] van et land, med en [[Bruto Binnenlands Product|BBP]] van 124.047 miljoon dollar in 2019. De ekonomy van de stad is ebaseerd up handel, deensten en industry. Industry, vöäral de technologiske industry vanweagen et grouten antal internationale bedryven dee öär höyvdkantoor in de stad hebbet en dårum steyt et bekend as de [[Silicon Valley]] van [[Mexico (laand)|Meksiko]].<ref>{{Nieuwscitaat| title =De meksikaanske Silicon Valley ligt in Jalisko|url=https://elpais.com/tecnologia/2017/03/12/actualidad/1489275848_767120.html|periodico=El País|fecha=2017-03-13|fechaacceso=2022 - 01-21|issn=1134-6582|language=es|name=Sonia|achternaam=Corona}}</ref>
 
-Et wördt beskowd as en belangryk kultureel centrum en referentsypünt vöär [[Meksiko]] in et butenland, ümdat [[Jalisko]] den båkermat is van [[mariachi]], [[charrería]] en [[tequila]]. Guadalajara hevt jårlikske evenementen med en grout prestige, sou as et [[Guadalajara International Film Festival]] en de [[Guadalajara International Book Fair]], de belangrykste in de [[Spaans|spaanskspreakende]] wearld en de up eyne nå gröytste in de wearld nå [[Frankfurt Book Fair|Frankfurt]], [[Düütskland]].
+Et wördt beskowd as en belangryk kultureel centrum en referentsypünt vöär [[Mexico (laand)|Meksiko]] in et butenland, ümdat [[Jalisko]] den båkermat is van [[mariachi]], [[charrería]] en [[tequila]]. Guadalajara hevt jårlikske evenementen med en grout prestige, sou as et [[Guadalajara International Film Festival]] en de [[Guadalajara International Book Fair]], de belangrykste in de [[Spaans|spaanskspreakende]] wearld en de up eyne nå gröytste in de wearld nå [[Frankfurt Book Fair|Frankfurt]], [[Düütskland]].
+
+[[Kategorie:Mexiko]]
+[[Kategorie:Stad]]
