--- a/Nedersaksische_bijnamen.mw
+++ b/Nedersaksische_bijnamen.mw
@@ -57,7 +57,7 @@ Bepaolde woorden, mangs zunder dudelijke betiekenis, bint in vaste ummeloop as w
 ====Bijnamen op basis van wat iene vake zeg====
 As iene bekendstiet um een bepaolde uutspraoke kan det de basis van zien bijname vörmen. In zien ''Zwolsche Sketsies'' gef [[Willem Kloeke]] de veurbielden '''Weet iej?''', '''Za-k maer zeggen''', '''Biej veurbeeld''' en '''Ma-'k bärsten'''. De leste was een harbargier die bij 't opdissen van starke verhalen vake zee: "Ma'k bärsten, as 't niiet woeur is!"
 
-Ok '''de olde Verdikkemij''', uut [[Lucas Jonker]] zien roman ''Harm Boer'nlèv'n an de Riest'' (1929), lek hiervan een veurbield te wezen.
+Ok '''de olde Verdikkemij''', uut [[Lucas Jonker]] zien roman ''Harm Boer'nlèv'n an de Riest'' (1929), lek hiervan een veurbield te wezen. In een verhaal van Willem Haandrikman in Drèents letterkundig tiedschrift ''Roet'' wördt '''Jobk Goffedomme''' opevoerd, die nogal ies löp te schelden.
 
 ====Huusnamen====
 As soortement femiliename wördt ok wal de huusname (hoesnaom, ezw.) gebruukt, die slat op 't huus (vanolds de boerderije) van herkomst. Een veurbield uut [[Barger-Oosterveld]], gemiente Emmen: een femilie die de femiliename Gerdes annaamp, stund eerder bekend as '''Botkes''', naor heur boerderije, 't '''Botkeshoes'''. 't Begrip huusname kan ok in briedere zin gebruukt wörden veur de bijname.
@@ -89,10 +89,11 @@ As soortement femiliename wördt ok wal de huusname (hoesnaom, ezw.) gebruukt, d
 *[https://www.geheugenvandrenthe.nl/bijnamen Artikel "Bijnamen" op de Digitale Drentse Encyclopedie]
 *J.P. van den Berg c.s. (1986), ''Van Reestdal tot Beentjesgraven. Van Kievitshaar tot Kievitsnest'', Zwolle: Natuur en Milieu Federatie Overijssel
 *Henk Bloemhoff (2005), ''Stellingwarfs - Nederlands Verklarend Handwoordenboek'', Berkoop/Oldeberkoop: Stichting Stellingwarver Schrieversronte
-*Hendrik van Dijk (1935), ''Luuks Hilbers jonges (Dialectschetsen uit het Drentsche dorpsleven)'', Dèventer: Æ. E. Kluwer 
-*Heufdstok 'Skeldnaemen' uut W. Kloeke (1931), ''Zwolsche Sketsies'', Zutphen: W.J. Thieme & Cie
+*Hendrik van Dijk (1935), ''Luuks Hilbers jonges (Dialectschetsen uit het Drentsche dorpsleven)'', Dèventer: Æ. E. Kluwer
+*Willem Haandrikman (2022), 'In de marge', in Drèents letterkundig tiedschrift ''Roet'', veurjaor 2022
 *Lucas Jonker (1929), ''Harm Boer'nlèv'n an de Riest''
 *Lucas Jonker (1939), ''Harm, de boer van 't Hoogelaand'', Möppelt: Boom
+*Heufdstok 'Skeldnaemen' uut W. Kloeke (1931), ''Zwolsche Sketsies'', Zutphen: W.J. Thieme & Cie
 *Minke Kraijer, Henk Mulder, Dick Visscher en Philomène Bloemhoff-de Bruijn (2008), ''Op zien Zwols: Woordenboek van de Zwolse taal'', Kampen: Iesselakkedemie
 
 ==Kiekt ok bij==
