--- a/São_Tomé_un_Príncipe.mw
+++ b/São_Tomé_un_Príncipe.mw
@@ -34,6 +34,67 @@ De lüde van São Tomé en Princípe sint höyvdsakelik afrikaansk of [[mestise]
 
 De populäärste sport is [[vootbal]]. Koaken doot se vake med heyte krüden en ouk koffee wördt mangs döär et eaten dån. Et land steyt in de portugeyske wearld bekend üm de ryke [[literatuur|literäre]] tradity.
 
+== Geskedenisse ==
+
+=== Geologiske geskedenisse ===
+De eilände van São Tomé en Principe untstünden ungeväär 30 miljoon jår weaderümme döär vulkaniske warking under water langs de Kameroonlyne. Döär wesselwarking med seywater en dan weader es ne uutbörsting, sint verskillende soorten rotsen en mineralen up mekander stapeld.
+
+=== Ankumst van de Europeanen ===
+Rund de jåren 1470 kümmen de portugeysken as eyrste Europeanen up de de eilanden, dee as dotyds unbewoand warren. De eyrsten warren João de Santarén en Pêro Escobar. De portugeysken deaden de eilanden verkennen en beslöäten dat et gode uutvalspöste warren vöär handel med et vasteland.
+
+De dåtums wårup as se kümmen wordet up den 21. december egeaven (St. Tomasdag) 1471 vöär São Tomé en 17. January (St. Töänisdag) 1472 vöär Príncipe. Andere brunnen geavet weader andere dåtums. Príncipe wör eyrst St. Töänis enöömd, mär in 1502 wör den name veranderd in ''Ilha do Príncipe'' (Prince syn eiland), as verwysing når den prince van Portugal den as geld kreag van de sukerupbrengsten van et eiland.
+
+
+Den eyrsten suksesvullen neadersetting van São Tomé wör sticht in 1493 döär Álvaro Caminha, den as et land kreag as gave van den köäning. Príncipe wör in 1500 under enselvde ård afspraak sticht. Toch kreagen se et volk neet sou wyd üm der hen to gån. Dårümme stüürden se der ‘ungewünskeden’ hen, sou as jöäden. Ungeväär 2000 jöädske kinder van achte of junger wörden der vanaf et iberiske skiereiland henebracht üm to warken up de plantages. Up den vulkanisken grund wolde et spül best groien.
+
+=== Portugeesk São Tomé and Príncipe ===
+Teagen 1515 warren São Tomé en Príncipe oaverslagsteades ewörden vöär de slavenhandel vanuut Elmina.
+
+Sukerreed verbouwen had y nen houp warkvolk vöär nöydig en de portugeesken nöämen nen houp slaven vanaf et afrikaanske vasteland. Vöär de gekde rund suker untstünd betalen y weinig vöär land up de eilanden. Et buren was vöäral vöär lokaal gebruuk en de ekonomy must et vöäral hebben van slavenhandel. Vöäl voodsel wör importeerd. Do as den landeigenaar Álvaro Borges uut de tyd küm in 1504, wör syn land en syne deers vöär mär 13.000 réis verkoft, ungeväär eavenvöäle as dree slaven. Teagen 1506 had São Tomé volgens Valentim Fernandes meyr sukerreedvelden as Madeira en makeden se der ouk wal molasse, mär et eiland had gin fabrikswaerdige maskines üm up groute skåle suker to maken.
+
+=== Ekonomisken vöäruutgang in den 16. eywe ===
+São Tomé begünde ekonomisk pas wat vöär to stellen do as der in 1515 ne waterdreavene sukermöäle bouwd wör. Dat brachten de sukerbouw in ne ströymversnelling: “De velden breided uut en der kummet ouk meyr sukermöälen by. Up et ougenblik sint der noch mär twey möälen en dree in anbouw, as wy de (groute) möäle van de anneamers der by reakent. De ümstandigheiden sint der good vöär. Der sint ströymkes en holt sat üm der noch vöäle meyr to bouwen. En de sukerreedplüme sint de grötste wat ik ooit eseen hebbe.”
+
+Sukerplantages draiden up slavenarbeid. Teagen et midden van den 16. eywe hadden de portugeysken van de eilanden de grötste sukeruutvoorders emaked.
+
+De slaven wörden van de slavenküste van Westafrika haald, et Nigerdelta, et eiland Fernando Po en later uut de Kongo en Angola. In de 16. Eywe wörden de slaven verhandeld tüsken de eilanden en Portugal, Elmina, et Köaningryk Kongo, Angola en de spaanske oaverseyske gebeden. Skattingen meynet dat Portugal in 1510 sou’n 10.000 töt 12.000 slaven importeerden. In 1516 kümmen der up São Tomé 4072 slaven bestemd vöär döärverkoup. Tüsken 1519 en 1540 was et eiland et middelpunt vöär slavenhandel tüsken Elmina en de Nigerdelta. Gedurende de 16. eywe deade São Tomé voordan handelen med Angola en et Köäningryk Kongo. In 1525 begünde São Tomé slaven uut to voren når Spaansk Amerika, med name de Kariben en Brasilie. Tüsken 1532 en 1536 güngen der vanaf et eiland in döärsneyde sou’n 342 slaven når de Antillen hen. Vöär 1580 löät Brasilie sou’n 75% van allen invoor uut São Tomé kummen, vöäral slaven. Töt wyd nå 1600 bleav slavenhandel eyne van de puurs wåras de ekonomy van São Tomé up löänden.
+
+Toch warren de machtsverholdingen van São Tomé in den 16. eywe divers. Vrye mulatten en swarte börgers möchten medregeyren. Vrywillige kolonisten güngen med ne wyde boage üm São Tomé hen vanweage seekdes en voodseltekörten. Dårümme voorden de portugeyske krone der gevangenen hen en modigden et an dat verskillende rassen med mekander trouwden. Sou hölden se de kolony by mekander. Slavendryverye was ginne vastigheid. In 1515 wör der en köäninglik bevel egeaven dat afrikaanske vrouwlüde en mengde kinder van witte kolonisten neet as slaven eseen wörden. In 1517 küm der noch en bevel üm alle mannelike slaven van de oorsprungelike kolonisten vry to maken. Nå 1520 küm der en köäninglik besluut dat vrye, etrouwde mulatten med land ouk by de oaverheid mochten warken. Dårup küm in 1546 noch et dekreet dat disse kwalificeerde mulatten lykesteld wörden an de witte kolonisten. Vrye mulatten en swarte börgers kreagen dårmed kansen üm up den socialen lädder up to klimmen en med to draien in de regeyring en sakenwearld. Stabil wör et der anders neet van. Ümdat lüde hyrmed noch altyd up klöre en afkumst selekteerd wörden, kreagen lüde et regelmåtig med stadsråden, den gouvernöör en biskop in et mot. Politik was et der voordan instabil.
+
+Slaven up São Tomé hadden et anvangelik når verholding neet sou swår. Gedurende den 16. eywe skrivt nen naamlousen portugeysken bootsman dat de slaven as koppels möchten warken, öäre eygene underkummens hadden en eyns in de weake selv an öären gården möchten warken. Do as de plantages inevoord wörden, was dit lösse stelsel skounwal vöärby. Slaven güngen voordan up de löppe en tröäken de unharbargsame bargwolden in et binnenland in. Tüsken 1514 en 1527 kneypen vyv percent van alle slaven der tüskenhen. Vake verkümmen se dan van den hunger. Tüsken 1531 en 1535 was der selvs up de plantages hungersnoud. Uuteandelik stichtden maronnenvolker sounöömde ''macambos'' (gemeynskappen) in et binnenland.
+
+=== Slavenupstanden ===
+De eyrste slavenupstanden begünden in de jåren dartig van den 16. eywe, do as maronnenbendes by mekander kümmen üm plantages to oavervallen (wårvan as verskillende löädig stünden). Lokale portugeyske heyrskers sünden in 1531 nen officielen klacht når de Krone dat der to vöäle kolonisten en swarte börgers uut de tyd kümmen döär de anvallen en dat se et eiland kunden vergeaten as der niks edån wör. In 1533 unstünd der nen buskoorlog, wårin as der nen buskkapitein anesteld wör üm de maronnen der under to holden.
+
+In 1549 geböärden der wat upmarkeliks. Nen ryken mulat den as plantageholder was, Ana de Chaves, nöäm twey kearls uut de ''macambos'' up dee seaden dat se vrygeboarenen warren. Med hülpe van Chaves skreaven de twey kearls den köäning an üm vry verklård to worden. Den köäning vünd et good. Den pyk in maronnen-inwoaners küm togelyke med de hougtyden van de sukermakerye. De slaven hüngen der up de plantages med de beyne uut. Tüsken 1587 en 1590 löäten weader heyl wat slaven et leaven by nen nyen buskoorlog. Teagen 1593 verklården den gouvernöör at de maronnenbendes souwat vulleydig uutebannen warren. Toch wüsten maronnen in et süden en westen kolonisten weg to holden.
+
+Den grötsten slavenupstand was den van juli 1595, do as de regeyring druk was med geskillen tüsken den bisskop en gouvernöör. Nen slaav med de name Amador munsterden 5000 slaven an üm plantages, sukermöälen en koloniale hüse to oavervallen en vernetigen. Amadors upstandelingen oavervöllen de stad dree mål. Se verwöösten 60 van 85 sukermöälen up et eiland. Nå dree weaken wüst et laeger den upstand to underdrukken. Tweyhunderd slaven kümmen ümme in de gevechten en Amador en andere leiders wörden eksekuteerd. De rest van de slaven kreagen amnesty en musten weader an et wark up de plantages. In de tweyhunderd jår dårup kümmen slaven noch reagelmåtig in upstand.
+
+=== São Tomé en Príncipe in de 18., 19. en 20. eywen ===
+Uuteandelik groiden et sukermaken in de westindiske kolonys São Tomé en Príncipe vöärby. Wo vöäle geld Portugal der ouk instöäk, de groute slavenbevolking löät sik lastig kommanderen. Sukermakerye wör voordan minder in de 100 jår der up. Teagen et midden van de 17. eywe was São Tomé neet vöäle meyr as nen vöärrådpost vöär slavenskeype tüsken et afrikaanske en et amerikaanske vasteland.
+
+Vöärin de 19. eywe wörden der twey nye gewassen inevoord; koffee en kakao. Den ryken vulkanisken grund wulden dee gewassen best up groien. Binnen nen körten tyd was al et bouwland verdeyld oaver ''roças'' (groute plantages) under portugeysk beheyr en vake van grundeygenaren dee der selv nooit warren. Teagen 1908 was São Tomé de grötste kakaoprodusent van de wearld, wat noch altyd et vöärnaamste gewas is van et land.
+
+Et roças-stelsel gavven de beheyrders groute vryheid, wårdöär afrikaansk warkvolk et flink must lyden. Portugal deade slavenholderye der officeel in 1876 achterhen, mär gedwüngen, betaald wark bleav bestån. In et vakblad Scientific American stünd in 1897 noch en heyl artikel oaver slavenwark med foto’s der by.
+
+Vöärin de 20. eywe küm der internationalen andacht vöär en skandaal wårby angoleesk warkvolk under erbarmelike ümstanden ewüngen musten warken. Unvreyde oaver de warkümstanden bleav döärmodderen en leidden in 1953 töt rellen, wårby as hunderden afrikaanske warkers ümmekümmen in gevechten med de portugeyske heyrskers. Dit ‘Bloodbad van Batepá’ wördt noch alle jåren herdacht.
+
+Teagen et ende van de 1950er jåren, do as ouk andere afrikaanske landen unafhangelikheid eisden, förmden en klein köppelken Sãotoméanen de Vryheidsbeweaging van São Tomé en Príncipe (VBSTP), dee warkeden vanuut Gabon oaversey. Vanaf de 1960er jåren güng et rap, med as belangryke geböärdenisse et ümvallen van et diktatorskap van Caetano in april van 1974.
+
+Et nye portugeyske regime wolde wark maken van de upheffing van oaverseyske kolonyen. In november van 1974 kümmen ne afvaerdiging en de VBSTP by mekander üm nen oavereynkumst to maken. Nå nen tyd under nen oavergangsregeyring kreag São Tomé en Príncipe up 12. July 1975 unafhangelikheid. Den eyrsten president wör Sekretaris-Generaal Manuel Pinto da Costa van de VBSTP.
+
+In 1990 güng São Tomé en Príncipe as eyne van de eyrste afrikaanske landen oaver up demokratiske grundbeginselen. De Grundwet wör anepast en politike oppositioonspartyen wörden legaal. In 1991 wörden de eyrste geweldlouse, vrye en oapen verkesingen hölden. Miguel Trovoada, nen vöärmåligen eyrsten minister den as in 1986 verbannen was, küm weader as unafhangeliken kandidåt en wör eköäsen en dårnå noch es herköäsen in 1996.
+
+De Demokratiske Samenwarkingspartye wün ne meyrderheid van de seatels in de Nationale Gaddering en de VBSTP ne vöärname en höyrbåre minderheidspartye. In 1992 wörden der gemeynderådsverkesingen ehölden en VBSTP wün dår ne meyrderheid up vyv van de söäven streakråden. In 1994 wün et ne meyrderheid van de stemmen in de Gaddering en ne oavergroute meyrderheid in de verkesingen van 1998.
+
+Presidentiäle verkesingen wörden in juli 2001 ehölden. Fradique de Menezes, van de unafhangelike demokratiske aktioon wör verköäsen en installeerd up den 3. September. In määrt 2002 volgden parlementäre verkesingen. In 2003 pleygden et leager nen ståtsgreyp. See eisden dat der wat dån worden solde an ümköyperye en dat de upbrengsten van den öäly eyrliker verdeyld worden solden. Der wör en akkoord underteykend en president De Menezes wör weader anesteld, mär et leager regeyrden med töt de verkesingen van 2006. Dårin wün Fradique de Menezes med gemak nen tweyden termyn.
+
+Up 12 february 2009 wör der nen tweyden ståtsgreyp probeerd. De skuldigen wörden vastesat, mär kreagen en pardon van den president.
+
+Evaristo Carvalho wör in 2016 president, do as hee et wün van aftreadend president Manuel Pinto da Costa. In 2018 wör Jorge Bom Jesus, leider van de Vryheidsbeweaging van São Tomé en Príncipe - Sociaaldemokratiske Partye, den nyen eyrsten minister.
+
+In 2020 kreag et land ouk med COVID-19 to maken. In totaal kümmen der sou’n 76 lüde an uut de tyd.
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
 [[Kategorie: Laand]]
