--- a/SC_Heerenveen.mw
+++ b/SC_Heerenveen.mw
@@ -2,7 +2,7 @@
 '''SC Heerenveen''' is een [[voetbal|voetbalklup]] van [[Et Vene (plak)|Et Vene]]. De klup wodde opricht in [[1920]] en speult sund 1993 in de eredivisie. 
 
 == Geschiedenis ==
-Tussen 1941 en 1951 wodde de klup negen keer noordelik kampioen. Dit was ok de tied van [[Abe Lenstra]].
+Tussen [[1941]] en [[1951]] wodde de klup negen keer noordelik kampioen. Dit was ok de tied van [[Abe Lenstra]].
 
 In 1989/90 promoveerde Et Vene naor de hoogste kompetisie van et Nederlaanse voetbal. Nao een hiel min eerste seizoen in de eredivisie volgde de degradaosie naor de eerste divisie. Onder [[Foppe de Haan]] promoveerde de klup in et seizoen 1993/94 weeromme naor de eredivisie. Sund die tied bin ze niet meer degradeerd.
 
