*Empty MediaWiki Message*

--- a/SC_Heerenveen.mw
+++ b/SC_Heerenveen.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Abe Lenstrastadion.jpg|thumb|Et Vene speult in et [[Abe Lenstra Stadion]] waor plaets is veur 26.400 meensken.]]
-'''SC Heerenveen''' is een [[voetbal|voetbalklup]] van [[Et Vene (plak)|Et Vene]]. De klup wodde opricht in [[1920]] en speult sund 1993 in de eredivisie. 
+'''SC Heerenveen''' is een [[voetbal|voetbalklup]] van [[Et Vene (plak)|Et Vene]]. De klup wodde opricht in [[1920]] en speult sund [[1993]] in de eredivisie. 
 
 == Geschiedenis ==
 Tussen [[1941]] en [[1951]] wodde de klup negen keer noordelik kampioen. Dit was ok de tied van [[Abe Lenstra]].
