*Empty MediaWiki Message*

--- a/Heracles_Almelo.mw
+++ b/Heracles_Almelo.mw
@@ -1,6 +1,6 @@
 '''Heracles Almelo''' is nen prof[[vootbal]]klub oet [[Almelo]], op ericht op [[3 mei]] [[1903]] en doarmet ene van de oaldere profvootbalklubs van Nederlaand. Ze spölt in et [[Polmanstadion]].
 
-Heracles wör kampioen van Nederland in [[1927]] en [[1941]]. Doarnoa had et nog ne kleaine opleawing midden joaren zestig. Noa de degradasie in 1966 spölden ze meestentieds in de [[Eerste Divisie]], tot as ze doar in 2005 kampioen van wörden. In de [[Eredivisie]] deu Heracles et völle better as de meeste leu verwocht harren. Ze hoofden in gin eankel joar noakompetisie te spöllen en eandigden mangs zölfs in de subtop. In 2012 haalden ze de finale van de [[KNVB-beker]], in 2016 wunnen ze de play-offs veur Europees vootbal. Hierdeur geet de klub in et seizoen 2015/16 veur et eerst [[Europees vootbal]] spöllen.
+Heracles wör kampioen van Nederland in [[1927]] en [[1941]]. Doarnoa had et nog ne kleaine opleawing midden joaren zestig. Noa de degradasie in [[1966]] spölden ze meestentieds in de [[Eerste Divisie]], tot as ze doar in 2005 kampioen van wörden. In de [[Eredivisie]] deu Heracles et völle better as de meeste leu verwocht harren. Ze hoofden in gin eankel joar noakompetisie te spöllen en eandigden mangs zölfs in de subtop. In 2012 haalden ze de finale van de [[KNVB-beker]], in 2016 wunnen ze de play-offs veur Europees vootbal. Hierdeur geet de klub in et seizoen 2015/16 veur et eerst [[Europees vootbal]] spöllen.
 
 == Naam ==
 De klub is eneumd noar den Grieksen [[haalfgod]] [[Herakles]]. Der bunt leu in Nederlaand dee as den name van de klub oetsprekt as HEE-rakles, moar anhangers van de klub (en ok verslaggevvers as [[Tom Egbers]]) zegt He-RAA-kles. In 't [[Oaldgrieks]] lea et akseant op de leste lettergreep, met ne [[perispomenè]] (circumflexum): Ἡρακλῆς 'HeraKLÊS'. In Nederland wörd et [[Grieks]] meestentieds volgens de [[Latien]]se dreesyllabenwet oetspreuken. In dat geval zol de platte oetsproake met et akseant op de veurleste lettergreep good wean. De oetsproake met de klemtoon an et begin keump woarschienlik van de Latiense name ''Hercules''.
