--- a/Jeroen_Heubach.mw
+++ b/Jeroen_Heubach.mw
@@ -2,7 +2,7 @@
 '''Jeroen Heubach''' ([[Eanske]], [[24 september]] [[1974]]) is nen [[Tweante|Tweantsen]] [[vootbal]]spöller, den at t grötste deel van zinne vootballoopbaan bie [[FC Tweante]] spöld hef. De leste tied is he oet ehuurd an [[N.E.C.]].
 
 ==Loopbaan==
-Heubach dee vuur t eerste met Tweante met op [[11 december]] [[1994]], thoes tegen [[MVV]]. Begin tweede helfte deed he invallen vuur [[Wilfried Elzinga]]. Dree seizoenen later har he skoonwal nog mer 17 wedstrieden met edoan. Doarumme vertreuk he noar MVV um mear wedstrieden met te können doon. Bie MVV steund he twee joar in de vaste opstellige, doarnoa gung he wierumme noar Tweante. Seizoen 2008/2009 was zin 13e spöljoar bie Tweante, en hee dee zin kontrakt nog verlengen töt zommer 2010. Weenter 2009/2010 wör he oet ehuurd an N.E.C.
+Heubach dee vuur t eerste met Tweante met op [[11 december]] [[1994]], thoes tegen [[MVV]]. Begin tweede helfte deed he invallen vuur [[Wilfried Elzinga]]. Dree seizoenen later har he skoonwal nog mer 17 wedstrieden met edoan. Doarumme vertreuk he noar MVV um mear wedstrieden met te können doon. Bie MVV steund he twee joar in de vaste opstellige, doarnoa gung he wierumme noar Tweante. Seizoen 2008/2009 was zin 13e spöljoar bie Tweante, en hee dee zin kontrakt nog verlengen töt zommer [[2010]]. Weenter 2009/2010 wör he oet ehuurd an N.E.C.
 
 ==Earelieste==
 *KNVB beker: 2001 (FC Tweante) 
