*Empty MediaWiki Message*

--- a/S.V._Nieuwleusen.mw
+++ b/S.V._Nieuwleusen.mw
@@ -1,4 +1,4 @@
-'''S.V. Nieuwleusen''' (stiet veur '''Sport Vereniging Nieuwleusen''') is een op  1 augustus 1957 operichte [[vootbal|voetbalverieniging]] in de [[Oaveriessel|Aoveriesselse]] plaatse [[Ni'jlusen|Neilusen]]. De club had in 2021 meer as achthonderd leden.
+'''S.V. Nieuwleusen''' (stiet veur '''Sport Vereniging Nieuwleusen''') is een op [[1 augustus]] [[1957]] operichte [[vootbal|voetbalverieniging]] in de [[Oaveriessel|Aoveriesselse]] plaatse [[Ni'jlusen|Neilusen]]. De club had in [[2021]] meer as achthonderd leden.
 
 Der bint acht herenteams, twee damesteams en een hiele bulte jeugdelftallen van de F's töt de A's. 't Standaardelftal van de verieniging speult in de darde klasse van 't [[KNVB]]-district Noord van 't [[Nederlaands amateurvoetbal]] (staand: seizoen 2020/21).
 
