*Empty MediaWiki Message*

--- a/Francesco_Totti.mw
+++ b/Francesco_Totti.mw
@@ -1,7 +1,7 @@
 [[Bestaand:Totti 2011 crop.jpg|right|upright=0.4|thumb|150px|Francesco Totti]]
 '''Francesco Totti''' ([[Rome]], [[27 september]] [[1976]]) is nen [[Italiën|Italiaansen]] [[voetbal]]spöller.
 
-Hee is anvaller en spölt sund 1992 veur t eerste van [[AS Roma]]. In november 2009 verlengen he zien kontrakt tot en met t seizoen 2013/14.
+Hee is anvaller en spölt sund [[1992]] veur t eerste van [[AS Roma]]. In november [[2009]] verlengen he zien kontrakt tot en met t seizoen 2013/14.
 
 == Uutgaonde verwiezingen ==
 * [http://www.francescototti.it/ francescototti.it]
